# CompanionAI

./: README.md  demo.py  demo_data.json  pyproject.toml
app/: config.py  main.py
app/services/: base_ai.py  context.py
app/services/chat_analysis/: __init__.py  main.py  models.py  prompts.py
app/services/personality_engine/: __init__.py  main.py  prompts.py
app/services/summarizer/: __init__.py
