[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.1",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
